Replaced getFirst() with get(0)